# weather-app

./: .coverage  .gitignore  Makefile  coverage.xml  pyproject.toml  requirements-dev.txt  test-results.xml
src/weather/: client.py  display.py  model.py
