[project]
name = "weather-app"
version = "0.0.1"
description = "a simple weather-app" 

[tool.ruff]

#Python version
target-version = "py314"

#Line length - same as black
line-length = 88
indent-width = 4

#Linter configuration
[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]

python_version = "3.14"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "--junitxml=test-results.xml --cov=src/weather --cov-report=xml:coverage.xml --cov-report=term-missing"
testpaths = ["tests"]